# version 0.65
2021-12-02
- Updated VC cache.
2021-12-03
- Enabled listing system vc for authorized users.
2021-12-08
- Removed koralQuery and statistics from VC list.

# version 0.64.1
2021-10-26
- Bump Kustvakt and Krill versions.

# version 0.64
2021-07-29
- Updated the change files and made a new version.
2021-08-12
- Fixed errors due to missing query type and added tests.
2021-08-13
- Fixed missing request entity.
- Updated the query service to enable editing query references.
2021-08-16
- Fixed creator param when storing query or VC by admins for 
  the system or other users.

# version 0.63.2
2021-06-11
 - Updated OAuth2 token length & secure random algorithm config.
 - Added character set filter to random code generator, e.g. for client_id.
2021-06-14
 - Updated roleId and super client parameters.
2021-06-24
 - Fixed broken test. 
2021-07-22
 - Updated cache settings and some loggings.
2021-07-26
 - Replaced annotation parsing with restoring the annotation tables to the
   database.
 - Moved cache config to the full config. 
   
# version 0.63.1
2021-02-22
 - Updated libraries (margaretha)
 - Renamed virtual corpus to query (margaretha)
2021-02-26
 - Added query access roles and fixed vc access roles (margaretha)
 - Added delete query webservice and tests (margaretha) 
2021-03-25
 - Updated Koral version for Info Controller (margaretha)
 - Updated OAuth2 token list with token type and user clientId 
   parameters (margaretha) 
2021-03-29
 - Added client type in the client list web-service. Resolved #58 (margaretha)  
2021-04-19
 - Updated OAuth2Client JSON definition and controller tests (margaretha)
2021-04-26
 - Updated OAuth2 Client list (margaretha)
2021-04-30
 - Updated parameters in the error responses of OAuth2 APIs for coherence (margaretha)
 - Updated OAuth2 API responses for coherence (margaretha) 
2021-06-07
 - Updated OAuth2 client dto (margaretha)
  
# version 0.63
26/10/2020